--- a/bai test 2.html
+++ b/bai test 2.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>bai </title>
+    <title>tim so nguyen trong mang</title>
 </head>
 <body>
+<script>
+    function tryRemoveFromArray(arrayInt,x)
+    {
+        while(arrayInt.indexOf(x) != -1)
+        {
+            arrayInt.splice(arrayInt.indexOf(x),1);
+        }
+        return arrayInt;
+    }
 
+</script>
 </body>
 </html>
