--- a/bai test 4.html
+++ b/bai test 4.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Circle</title>
 </head>
 <body>
-
+<canvas id="circle" style ="width:600px; height:300px; border:1px solid black"></canvas>
+<script>
+    class Circle {
+        constructor(x,y,radius,color) {
+            this.x = x;
+            this.y = y;
+            this.radius = radius;
+            this.color = color;
+        }
+        render(canvas) {
+            let ctx = canvas.getContext('2d');
+            ctx.beginPath();
+            ctx.arc(this.x,this.y,this.radius,0,Math.PI*2);
+            ctx.fillStyle = this.color;
+            ctx.fill();
+        }
+    }
+    let circle = new Circle(20,20,100,'#ff0000');
+    circle.render(document.getElementById('circle'));
+</script>
 </body>
 </html>
